--- a/sass/theme/_theme.scss
+++ b/sass/theme/_theme.scss
@@ -7,7 +7,7 @@
 @import "partials/card";
 @import "partials/close";
 // @import "partials/coming-soon";
-// @import "partials/custom";
+@import "partials/custom";
 // @import "partials/footer";
 @import "partials/forms";
 // @import "partials/gallery";
